--- a/estilo.css
+++ b/estilo.css
@@ -6,3 +6,11 @@
     color: blue;
     font-size: 50px;
 }
+
+.box {
+    height: 100px;
+    width: 100px;
+    background-color: #ccc;
+    margin:20px;
+    border: 1px solid #213234;
+}
